# duffel-mcp-server

./: AGENTS.md  CLAUDE.md  README.md
docs/plans/: 2026-02-15-smarter-search-and-scoring-design.md  add-hotel-search-tools.md  tool-2-duffel-get-stay-rates.md
duffel_mcp/: pyproject.toml  server.py
