[project]
name = "duffel-mcp"
version = "1.1.0"
description = "MCP server for Duffel flight booking API with checkout flow"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "redis>=5.0.0",
    "fastmcp>=3.2.4",
]

[project.scripts]
duffel-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
